--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,14 +5,30 @@
     {
       "purpose": "maskable",
       "sizes": "512x512",
-      "src": "/icon512_maskable.png",
+      "src": "icon512_maskable.png",
       "type": "image/png"
     },
     {
       "purpose": "any",
       "sizes": "512x512",
-      "src": "/icon512_rounded.png",
+      "src": "icon512_rounded.png",
       "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "screenshot-desktop.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "デスクトップ画面のスクリーンショット"
+    },
+    {
+      "src": "screenshot-mobile.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "モバイル画面のスクリーンショット"
     }
   ],
   "orientation": "any",
@@ -21,5 +37,7 @@
   "lang": "ja-JP",
   "name": "Ichipiro+",
   "short_name": "Ichipiro+",
-  "start_url": "/"
+  "start_url": "/",
+  "scope": "/",
+  "description": "広島市立大学生用アプリ"
 }
