--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "biome lint --write ./src",
+    "format": "biome format ./src --write",
+    "check": "biome check --write ./src"
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
@@ -36,7 +38,7 @@
     "date-fns": "^4.1.0",
     "fuzzysort": "^3.1.0",
     "lodash": "^4.17.21",
-    "next": "14.2.24",
+    "next": "^14",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
@@ -45,12 +47,11 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.24",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
