--- a/lefthook.yml
+++ b/lefthook.yml
@@ -9,4 +9,4 @@ pre-commit:
   commands:
     biome:
       glob: "src/**/*.{js,ts,jsx,tsx}"
-      run: npx @biomejs/biome check --write {staged_files}
+      run: npm run check {staged_files}
